# CreatureGRC

./: .env.minimal.example  ARCHITECTURE.md  ARCHITECTURE.txt  ARCHITECTURE_V2.md  CODEOWNERS  QUICKSTART.md  README.md  WORKSPACE.md  catalog-info.yaml  docker-compose.yml  evidence_collector.py  generate_audit_package.py  grc  import_oscal_controls.py  litellm_integration.py  map_creatures_to_controls.py  mkdocs.yml  pyproject.toml  schema.sql
.backstage/: app-config.local.yaml
cli/: setup.py
cli/creaturegrc/: __init__.py  cli.py
compose/: .env.example  zone1-dev-artifacts.yml  zone2-security-monitoring.yml  zone3-secrets.yml  zone4-ai-agents.yml  zone6-identity.yml  zone7-grc-core.yml
config/: .env.minimal.example  config.example.yaml  litellm-config.yaml
config/examples/agent/: acme-corp.toml  default.toml
config/examples/server/: server.toml
config/examples/server/integrations/: keycloak.toml  netbox.toml  wazuh.toml
deployments/: Dockerfile.cli  docker-compose.ai-foundry.yml  docker-compose.grc-core.yml
docs/: backstage-integration.md  cloud-saas-tracking.md  commands.md  deployment.md  implementation-summary.md  index.md  jira-confluence-integration.md  quickstart-v2.md  quickstart.md
docs/adr/: 001-configuration-architecture.md
docs/architecture/: minimal-deployment.md
obot_workflows/: control-gap-analysis.yaml  evidence-ingestion.yaml  vendor-risk-assessment.yaml
scripts/: atlassian_collectors.py  cloud_collectors.py  import_csa_ccm.py  import_scf_controls.py  questionnaire_engine.py
src/creaturegrc/: __init__.py
src/creaturegrc/config/: __init__.py  loader.py  models.py
workflows/temporal/: temporal_workflows.py
